Fixed the issue of overlap by adding a box-shadow to the pinned post. Looks much better now.

--- a/styles/main.css
+++ b/styles/main.css
@@ -352,3 +352,8 @@ nav {
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
+.pinned {
+	position: absolute;
+	box-shadow: 2px 0px 7px 0px black;
+}
